# classy_blocks

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  EXAMPLES_README.md  HISTORY.rst  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  README.rst  blockMeshDict.template  classy_blocks.code-workspace  classy_blocks.py  example.py  functions.py  hexmesh_benchmark.xlsx  pyproject.toml  requirements.txt  requirements_dev.txt  run.py  run_example.py  setup.cfg  setup.py  test.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build_ci.yml
classes/: __init__.py  block.py  grading.py  mesh.py  objects.py  operations.py  primitives.py  shapes.py
classes/flat/: circle.py  face.py
classy_blocks/: __init__.py
classy_blocks/classes/: block.py  grading.py  mesh.py  operations.py  primitives.py  shapes.py  walls.py
classy_blocks/util/: constants.py  functions.py  grading_calculator.py  tools.py  vtk.sample
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/optimization/: quality-criteria.ods  relaxation.ods
example/system/: blockMeshDict
examples/: bug.py  run.py
examples/advanced/: autograding_highre.py  blockMeshDictAdvanced.template  chop_preserve.py  collapsed.py  cyclone.py  edge_chop.py  edge_grading.py  grader_test.py  inflation_grader.py  low_re_chops.py  merged.py  project.py  smooth_grader.py  sphere.py
examples/annulus/: example_annulus.py
examples/assembly/: l_joint.py  n_joint.py  t_joint.py
examples/case/: Allrun.mesh
examples/chaining/: coriolis_flowmeter.py  flywheel.py  helmholtz_nozzle.py  labyrinth.py  orifice_plate.py  piping.py  piping.py.tmp  tank.py  test_tube.py  venturi_tube.py
examples/complex/: Volute_HI.pts  Volute_HO.pts  Volute_TI.pts  Volute_TO.pts  airfoil.py  heat_exchanger.py  helmholtz_nozzle.py  karman.py  labyrinth.py  piping.py  pump_volute.py  sphere.py
examples/cylinder/: example_cylinder.py
examples/elbow/: example_elbow.py
examples/modification/: move_vertex.py  optimize_simple.py
examples/nozzle/: example_nozzle.py
examples/objects/: t_pipe.py
examples/operation/: airfoil_2d.py  box.py  channel.py  connector.py  extrude.py  loft.py  revolve.py  wedge.py
examples/optimization/: channel_analytic.py  diffuser.py  diffuser_free.py  diffuser_line.py  duct.py  quality-criteria.ods  simple.py
examples/primitive/: README.md  annulus.py  cylinder.py  elbow.py  from_points.py  nozzle.py
examples/shape/: custom.py  cylinder.py  elbow.py  elbow_wall.py  extruded_ring.py  frustum.py  frustum_wall.py  hemisphere.py  monocylinder.py  one_core_cylinder.py  quarter_cylinder.py  revolved_ring.py  ring.py  round.py  round_ring.py  shell.py  torus.py  wrapped_cylinder.py
examples/stack/: cube.py  fusilli.py
examples/transform/: mirror.py
operations/: base.py  operations.py
shapes/: circle.py  shapes.py
src/classy_blocks/: __init__.py  base.py  cbtyping.py  formats.py  grading.py  mesh.py  types.py
tests/: fixtures.py  test_assemble.py  test_autograde.py  test_block.py  test_bugs.py  test_classy_blocks.py  test_deferred.py  test_examples.py  test_flat.py  test_grading.py  test_mesh.py  test_operation.py  test_primitives.py  test_propagation.py  test_relations.py  test_shapes.py  test_util.py
tests/case/: Allrun.mesh
tests/fixtures/: block.py  data.py  mesh.py
tests/helpers/: collect_outputs.py
util/: blockMeshDict.template  constants.py  curves.py  functions.py  geometry.py  grading_calculator.py  tools.py  vtk.template
(+461 files in other folders)
