[project]
name = "classy_blocks"
version = "1.1.1"
description = "Python classes for easier creation of openFoam's blockMesh dictionaries."
readme="README.md"
license = {file = "LICENSE"}
keywords = [
    "classy_blocks",
    "OpenFOAM",
    "blockMesh"
]
authors = [
    {name = "Nejc Jurkovic", email = "kandelabr@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "nptyping"
]

[project.urls]
"Homepage" = "https://github.com/damogranlabs/classy_blocks"
"Tutorials" = "https://damogranlabs.com/category/classy_blocks"
"Bug Tracker" = "https://github.com/damogranlabs/classy_blocks/issues"
"Contributing" = "https://github.com/damogranlabs/classy_blocks/blob/master/CONTRIBUTING.rst"

[project.optional-dependencies]
dev = [
    "parameterized",
    "black",
    "pylint",
    "mypy"
]

[tool.black]
line-length = 120

[tool.pylint]
max-line-length = 120

[[tool.mypy.overrides]]
module = "scipy,scipy.*,parameterized"
ignore_missing_imports = true
