[project]
name = "classy_blocks"
version = "1.9.4"
description = "Python classes for easier creation of openFoam's blockMesh dictionaries."
readme = "README.md"
license = "MIT"
keywords = ["classy_blocks", "OpenFOAM", "blockMesh"]
authors = [{ name = "Nejc Jurkovic", email = "kandelabr@gmail.com" }]
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "nptyping", "numba"]

[project.urls]
"Homepage" = "https://github.com/damogranlabs/classy_blocks"
"Tutorials" = "https://damogranlabs.com/category/classy_blocks"
"Bug Tracker" = "https://github.com/damogranlabs/classy_blocks/issues"
"Contributing" = "https://github.com/damogranlabs/classy_blocks/blob/master/CONTRIBUTING.md"

[project.optional-dependencies]
dev = ["pytest", "parameterized", "ruff~=0.9", "mypy~=1.2", "pre-commit"]

[build-system]
requires = ["setuptools >= 80.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "YTT", "B", "A", "ARG", "RUF"]

[[tool.mypy.overrides]]
module = "scipy,scipy.*,parameterized.*"
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
